[package]
name = "nsfw-check-server"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.2" 
nsfw =  { version = "0.2.0", features = ["serde"] }
actix = "0.13"
actix-web = "4"
actix-multipart = "0.7.2"
serde = { version = "1", features = ["derive"] }
reqwest = "0.12.5"
env_logger = "0.11"
log = "0.4.22"
